Add logo and links to socials

--- a/index.html
+++ b/index.html
@@ -4,27 +4,49 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Retro Storm Studio</title>
+  <link rel="icon" type="image/png" href="imgs/favicon.png" />
   <link rel="stylesheet" href="styles.css" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" rel="stylesheet" />
 </head>
 <body>
   <header>
-    <h1>Retro Storm Studio</h1>
-    <nav>
-      <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#games">Games</a></li>
-        <li><a href="#team">Team</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
+    <div class="container">
+      <div class="logo-title">
+        <img src="/imgs/logo.png" alt="Retro Storm Studio Logo" class="logo" />
+        <!-- <h1>Retro Storm Studio</h1> -->
+      </div>
+  
+      <!-- Menu and socials on the right -->
+      <div class="right-content">
+        <nav>
+          <ul>
+            <li><a href="#about">About</a></li>
+            <li><a href="#games">Games</a></li>
+            <li><a href="#team">Team</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </nav>
+
+        <div class="socials">
+          <a href="https://discord.gg/MsEmdPuE" target="_blank"><i class="fab fa-discord"></i></a>
+          <a href="https://www.instagram.com/retrostormstudio/" target="_blank"><i class="fab fa-instagram"></i></a>
+          <a href="https://x.com/realretrostorm" target="_blank"><i class="fa-brands fa-x-twitter"></i></i></a>
+          <a href="https://www.tiktok.com/@retrostormstudio" target="_blank"><i class="fab fa-tiktok"></i></a>
+          <a href="https://bsky.app/profile/retrostormstudio.bsky.social" target="_blank"><i class="fa-brands fa-bluesky"></i></a>
+        </div>
+      </div>
+    </div>
   </header>
 
   <main>
-    
+    <div class="container">
+    </div>
   </main>
 
   <footer>
-    <p>&copy; 2025 Retro Storm Studio</p>
+    <div class="container">
+      <p>Copyright &copy; 2025 Retro Storm Studio</p>
+    </div>
   </footer>
 </body>
 </html>
