--- a/index.html
+++ b/index.html
@@ -11,13 +11,19 @@
 <body>
   <header>
     <div class="container">
-      <div class="logo-title">
-        <img src="/imgs/logo.png" alt="Retro Storm Studio Logo" class="logo" />
-        <!-- <h1>Retro Storm Studio</h1> -->
+      <div class="left-content">
+        <div class="logo-title">
+          <img src="/imgs/logo.png" alt="Retro Storm Studio Logo" class="logo" />
+        </div>
+    
+        <!-- Burger icon for mobile -->
+        <button class="burger" id="burger" aria-label="Toggle menu">
+          <i class="fas fa-bars"></i>
+        </button>
       </div>
-  
-      <!-- Menu and socials on the right -->
-      <div class="right-content">
+     
+      <!-- Right-side content -->
+      <div class="right-content menu" id="menu">
         <nav>
           <ul>
             <li><a href="#about">About</a></li>
@@ -26,18 +32,18 @@
             <li><a href="#contact">Contact</a></li>
           </ul>
         </nav>
-
+  
         <div class="socials">
           <a href="https://discord.gg/MsEmdPuE" target="_blank"><i class="fab fa-discord"></i></a>
           <a href="https://www.instagram.com/retrostormstudio/" target="_blank"><i class="fab fa-instagram"></i></a>
-          <a href="https://x.com/realretrostorm" target="_blank"><i class="fa-brands fa-x-twitter"></i></i></a>
+          <a href="https://x.com/realretrostorm" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
           <a href="https://www.tiktok.com/@retrostormstudio" target="_blank"><i class="fab fa-tiktok"></i></a>
           <a href="https://bsky.app/profile/retrostormstudio.bsky.social" target="_blank"><i class="fa-brands fa-bluesky"></i></a>
         </div>
       </div>
     </div>
   </header>
-
+  
   <main>
     <div class="container">
     </div>
@@ -48,5 +54,7 @@
       <p>Copyright &copy; 2025 Retro Storm Studio</p>
     </div>
   </footer>
+  
+  <script src="scripts.js"></script>
 </body>
 </html>
