Fix discord link

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </nav>
   
         <div class="socials">
-          <a href="https://discord.gg/MsEmdPuE" target="_blank"><i class="fab fa-discord"></i></a>
+          <a href="https://discord.gg/xMM8xB7PNc" target="_blank"><i class="fab fa-discord"></i></a>
           <a href="https://www.instagram.com/retrostormstudio/" target="_blank"><i class="fab fa-instagram"></i></a>
           <a href="https://x.com/realretrostorm" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
           <a href="https://www.tiktok.com/@retrostormstudio" target="_blank"><i class="fab fa-tiktok"></i></a>
